power: Add more error checks

Should fix crasher in most unlikely of circumstances. Like the
kernel giving us crap data.

https://bugzilla.gnome.org/show_bug.cgi?id=671268